# sqlite-scratch

./: .gitignore  Cargo.toml  README.md
src/: assets.rs  database.rs  error.rs  main.rs
static/: index.html  schema.html
static/css/: main.css
static/js/: index.js  schema.js  shared.js
