[package]
name = "sqlite-scratch"
version = "0.1.0"
edition = "2024"
authors = ["leleneme"]
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.8.4"
mime_guess = "2.0.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
